Fixed splash on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2318,7 +2318,7 @@ img.img-polaroid {
 }
 
 #home-splash h1 {
-    font-size: 2.0em;
+    font-size: 1.9em;
 }
 
 #about-splash {
